# OpenGL-Learning

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  OpenGL-Learning.sln  README.md  manage.py
Buffers and Drawing To Screen/: CMakeLists.txt
Buffers and Drawing To Screen/Element Buffer Objects/: CMakeLists.txt
Buffers and Drawing To Screen/Element Buffer Objects/src/: main.cpp
Buffers and Drawing To Screen/Multiple Attributes/: CMakeLists.txt
Buffers and Drawing To Screen/Multiple Attributes/src/: main.cpp
Buffers and Drawing To Screen/Multiple Buffers/: CMakeLists.txt
Buffers and Drawing To Screen/Multiple Buffers/src/: main.cpp
Buffers and Drawing To Screen/Multiple Fragment Shaders/: CMakeLists.txt
Buffers and Drawing To Screen/Multiple Fragment Shaders/src/: main.cpp
Buffers and Drawing To Screen/Rectangle/: CMakeLists.txt
Buffers and Drawing To Screen/Triforce/: CMakeLists.txt
Buffers and Drawing To Screen/Triforce/src/: main.cpp
BuildScripts/: add_cmake_subdirs.ps1  add_cmake_subdirs.sh  create_project.py  gen_lesson_configs.py  gen_subdir_cmake.py  generate_lessons.ps1  generate_lessons.sh  run_gen.sh  run_gen_lessons.sh
BuildScripts/templates/: main.cpp  shader.frag  shader.vert
BuildScripts/templates/include/: GLFWCallbacks.h
BuildScripts/templates/src/: main.cpp
Element Buffer Objects/: Element Buffer Objects.vcxproj
Element Buffer Objects/src/: main.cpp
Element Buffer Objects/x64/Debug/: Element Buffer Objects.exe.recipe  Element Buffer Objects.ilk  Element Buffer Objects.vcxproj.FileListAbsolute.txt  vc143.idb
Fragment Shader Gradients/: Fragment Shader Gradients.vcxproj
GLFW Window/: CMakeLists.txt  GLFW Window.vcxproj
GLFW Window/src/: main.cpp
GLFW Window/x64/Debug/: GLFW Window.exe.recipe  GLFW Window.ilk  GLFW Window.vcxproj.FileListAbsolute.txt  vc143.idb
GLFW Window/x64/Debug/GLFW Window.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  GLFW Window.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
GLSL/: GLSL.vcxproj
GLSL Datatypes/: GLSL Datatypes.vcxproj  GLSL Datatypes.vcxproj.filters
GLSL Structure/: GLSL Structure.vcxproj  GLSL Structure.vcxproj.filters  main.cpp
GLSL Structure/src/: main.cpp
Ins and Outs/: FragmentShaderOutput.glsl  Ins and Outs.vcxproj  Ins and Outs.vcxproj.filters
Ins and Outs/src/: ShaderOutput.frag
Multiple Attributes/: Multiple Attributes.vcxproj
Multiple Buffers/: Multiple Buffers.vcxproj
Multiple Buffers/src/: main.cpp
Multiple Buffers/x64/Debug/: Multiple Buffers.exe.recipe  Multiple Buffers.ilk  Multiple Buffers.vcxproj.FileListAbsolute.txt  Multiple Shaders.exe.recipe  Multiple Shaders.ilk  vc143.idb
Multiple Fragment Shaders/: Multiple Fragment Shaders.vcxproj
Multiple Fragment Shaders/x64/Debug/: Multiple Fragment Shaders.exe.recipe  Multiple Fragment Shaders.ilk  Multiple Fragment Shaders.vcxproj.FileListAbsolute.txt  vc143.idb
OpenGL Textures/: CMakeLists.txt
OpenGL Textures/src/: main.cpp
OpenGL Textures/src/Shaders/: fragShader.frag
Projects/: CMakeLists.txt
Projects/Buffers and Drawing To Screen/: CMakeLists.txt
Projects/Buffers and Drawing To Screen/Element Buffer Objects/: CMakeLists.txt
Projects/Buffers and Drawing To Screen/Multiple Attributes/: CMakeLists.txt
Projects/BuffersAndDrawingToScreen/: CMakeLists.txt
Projects/CamerasAndViewing/: CMakeLists.txt
Projects/CamerasAndViewing/src/: main.cpp
Projects/CoordinateSystems/: CMakeLists.txt
Projects/GLFW Window/: CMakeLists.txt
Projects/GLFWScreen/: CMakeLists.txt
Projects/Lighting/: CMakeLists.txt
Projects/OpenGL Textures/: CMakeLists.txt
Projects/OpenGLTextures/: CMakeLists.txt
Projects/Shaders And GLSL/: CMakeLists.txt
Projects/Shaders And GLSL/Fragment Shader Gradients/: CMakeLists.txt
Projects/Shaders And GLSL/GLSL Datatypes/: CMakeLists.txt
Projects/Shaders And GLSL/GLSL Datatypes/src/: Vectors.glsl  main.cpp
Projects/Shaders And GLSL/GLSL Structure/: CMakeLists.txt
Projects/Shaders And GLSL/Shader Class/: CMakeLists.txt
Projects/Shaders And GLSL/Shader Class/src/: main.cpp
Projects/Shaders And GLSL/Sharing Data Between Shaders/: CMakeLists.txt
Projects/Shaders And GLSL/Sharing Data Between Shaders/src/: main.cpp
Projects/Shaders And GLSL/Uniforms/: CMakeLists.txt
Projects/Shaders And GLSL/Uniforms/src/: main.cpp
Projects/Shaders And GLSL/Vertex Shader Attributes/: CMakeLists.txt
Projects/ShadersAndGLSL/: CMakeLists.txt
Projects/Transformations/: CMakeLists.txt
README Pictures/: Windows_11_logo.af
Rectangle/: Rectangle.vcxproj
Rectangle/src/: main.cpp
Shaders And GLSL/: CMakeLists.txt
Shaders And GLSL/Fragment Shader Gradients/: CMakeLists.txt
Shaders And GLSL/Fragment Shader Gradients/src/include/: Shader.h
Shaders And GLSL/GLSL Datatypes/: CMakeLists.txt
Shaders And GLSL/GLSL Structure/: CMakeLists.txt
Shaders And GLSL/GLSL Structure/src/: ShaderStructure.glsl
Shaders And GLSL/Ins and Outs/: CMakeLists.txt
Shaders And GLSL/Ins and Outs/src/: ShaderInput.vert  main.cpp
Shaders And GLSL/Shader Class/: CMakeLists.txt
Shaders And GLSL/Shader Class/src/: main.cpp
Shaders And GLSL/Shader Class/src/include/: GLFWCallbacks.h
Shaders And GLSL/Sharing Data Between Shaders/: CMakeLists.txt
Shaders And GLSL/Sharing Data Between Shaders/src/: main.cpp
Shaders And GLSL/Uniforms/: CMakeLists.txt
Shaders And GLSL/Uniforms/src/: main.cpp
Shaders And GLSL/Vertex Shader Attributes/: CMakeLists.txt
Sharing Data Between Shaders/: Sharing Data Between Shaders.vcxproj
Triforce/src/: main.cpp
Two Triangles/: TwoTriangles.vcxproj
Two Triangles/src/: main.cpp
Uniforms/: Uniforms.vcxproj  Uniforms.vcxproj.filters
Using GLSL/: GLSL.vcxproj
Vertex Shader Attributes/: Vertex Shader Attributes.vcxproj  Vertex Shader Attributes.vcxproj.filters
core/src/: Camera.cpp  Camera.h  FPSCounter.cpp  FPSCounter.h  ImageLoader.cpp  ImageLoader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h  glfwHelpers.h
(+144 files in other folders)
