# Add the specific projects inside this folder
add_subdirectory(Fragment Shader Gradients)
add_subdirectory(GLSL Datatypes)
add_subdirectory(GLSL Structure)
add_subdirectory(Ins and Outs)
add_subdirectory(Shader Class)
add_subdirectory(Sharing Data Between Shader)
add_subdirectory(Vertex Shader Attributes)