# Generated Category Registry
add_subdirectory("Fragment Shader Gradients")
add_subdirectory("GLSL Datatypes")
add_subdirectory("GLSL Structure")
add_subdirectory("Shader Class")
add_subdirectory("Sharing Data Between Shaders")
add_subdirectory("Uniforms")
add_subdirectory("Vertex Shader Attributes")
